add_subdirectory("000 - Test")
add_subdirectory("001 - Hello World")
add_subdirectory("100 - Multithreading")
add_subdirectory("150 - TCP Client")
add_subdirectory("151 - TCP Server")
add_subdirectory("200 - Frontend App")
add_subdirectory("201 - Image Rendering")
add_subdirectory("202 - Font Rendering")
# add_subdirectory("500 - 2D Collision")
# add_subdirectory("510 - 2D Line Segment Search")
# add_subdirectory("520 - 2D Graph Traversal")
